# craving

./: .gitignore  Cargo.toml  Crux.toml  README.md
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/example/craving/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/example/craving/: Core.kt  MainActivity.kt  http.kt
Android/app/src/main/java/com/example/craving/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/com/example/craving/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Android/shared/: build.gradle
Android/shared/src/androidTest/java/com/example/craving/shared/: ExampleInstrumentedTest.kt
Android/shared/src/test/java/com/example/craving/shared/: ExampleUnitTest.kt
shared/: Cargo.toml  uniffi.toml
shared/src/: app.rs  lib.rs
shared/src/app/: platform.rs
shared_types/: build.rs
