[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
android_logger = "0.13.3"
chrono = { version = "0.4.38", features = ["serde"] }
crux_core = { workspace = true }
crux_http = "0.9.2"
crux_kv = { workspace = true }
crux_platform = { workspace = true }
crux_time = { workspace = true }
lazy_static = "1.4.0"
log = "0.4.21"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.117"
uniffi = "0.28.0"
wasm-bindgen = "0.2.92"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.28.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }

[dev-dependencies]
assert_let_bind = "0.1.1"